--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <img src="./src/images/logo.png" alt="Logo" class="header__logo" />
         </div>
 
-        <form class="weather-search" action="">
+        <form class="weather-search">
           <input
             class="weather-search__input"
             type="search"
@@ -119,7 +119,13 @@
           </a>
         </div>
 
-        <div class="copyright">&copy;copyright</div>
+        <div class="copyright">
+          <p class="paragraph">
+            Cloudify - copyright &copy; 2022 Oluwabi Ahmed AKA (HAMLANREH). All
+            right reserved and this website should only be used for learning and
+            not commercial purposes.
+          </p>
+        </div>
       </footer>
     </div>
   </body>
