--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
           <p class="paragraph">
             Cloudify - copyright &copy; 2022 Oluwabi Ahmed AKA (HAMLANREH). All
             right reserved and this website should only be used for learning and
-            not commercial purposes.
+            non-commercial purposes.
           </p>
         </div>
       </footer>
