Added social media links

--- a/index.html
+++ b/index.html
@@ -34,15 +34,7 @@
         </form>
 
         <nav class="top-media">
-          <a class="top-media__link" href="#">
-            <svg class="top-media__icon">
-              <use
-                xlink:href="./src/images/icons/sprite.svg#icon-discord"
-              ></use>
-            </svg>
-          </a>
-
-          <a class="top-media__link" href="#">
+          <a class="top-media__link" href="https://twitter.com/hamlanreh">
             <svg class="top-media__icon">
               <use
                 xlink:href="./src/images/icons/sprite.svg#icon-twitter"
@@ -50,7 +42,10 @@
             </svg>
           </a>
 
-          <a class="top-media__link" href="#">
+          <a
+            class="top-media__link"
+            href="https://www.youtube.com/channel/UCZl4sLl3ux5bNqJw7Ec2pdg"
+          >
             <svg class="top-media__icon">
               <use
                 xlink:href="./src/images/icons/sprite.svg#icon-youtube"
@@ -58,10 +53,21 @@
             </svg>
           </a>
 
-          <a class="top-media__link" href="#">
+          <a
+            class="top-media__link"
+            href="https://www.linkedin.com/in/ahmed-oluwabi-748844232"
+          >
             <svg class="top-media__icon">
               <use
                 xlink:href="./src/images/icons/sprite.svg#icon-linkedin"
+              ></use>
+            </svg>
+          </a>
+
+          <a class="top-media__link" href="#">
+            <svg class="top-media__icon">
+              <use
+                xlink:href="./src/images/icons/sprite.svg#icon-discord"
               ></use>
             </svg>
           </a>
@@ -86,15 +92,7 @@
 
       <footer class="footer">
         <div class="media">
-          <a class="media__link" href="#">
-            <svg class="media__icon">
-              <use
-                xlink:href="./src/images/icons/sprite.svg#icon-discord"
-              ></use>
-            </svg>
-          </a>
-
-          <a class="media__link" href="#">
+          <a class="media__link" href="https://twitter.com/hamlanreh">
             <svg class="media__icon">
               <use
                 xlink:href="./src/images/icons/sprite.svg#icon-twitter"
@@ -102,7 +100,10 @@
             </svg>
           </a>
 
-          <a class="media__link" href="#">
+          <a
+            class="media__link"
+            href="https://www.youtube.com/channel/UCZl4sLl3ux5bNqJw7Ec2pdg"
+          >
             <svg class="media__icon">
               <use
                 xlink:href="./src/images/icons/sprite.svg#icon-youtube"
@@ -110,10 +111,21 @@
             </svg>
           </a>
 
-          <a class="media__link" href="#">
+          <a
+            class="media__link"
+            href="https://www.linkedin.com/in/ahmed-oluwabi-748844232"
+          >
             <svg class="media__icon">
               <use
                 xlink:href="./src/images/icons/sprite.svg#icon-linkedin"
+              ></use>
+            </svg>
+          </a>
+
+          <a class="media__link" href="#">
+            <svg class="media__icon">
+              <use
+                xlink:href="./src/images/icons/sprite.svg#icon-discord"
               ></use>
             </svg>
           </a>
