Modified social media links

--- a/index.html
+++ b/index.html
@@ -34,7 +34,11 @@
         </form>
 
         <nav class="top-media">
-          <a class="top-media__link" href="https://twitter.com/hamlanreh">
+          <a
+            class="top-media__link"
+            target="_blank"
+            href="https://twitter.com/hamlanreh"
+          >
             <svg class="top-media__icon">
               <use
                 xlink:href="./src/images/icons/sprite.svg#icon-twitter"
@@ -44,6 +48,7 @@
 
           <a
             class="top-media__link"
+            target="_blank"
             href="https://www.youtube.com/channel/UCZl4sLl3ux5bNqJw7Ec2pdg"
           >
             <svg class="top-media__icon">
@@ -55,6 +60,7 @@
 
           <a
             class="top-media__link"
+            target="_blank"
             href="https://www.linkedin.com/in/ahmed-oluwabi-748844232"
           >
             <svg class="top-media__icon">
@@ -64,7 +70,7 @@
             </svg>
           </a>
 
-          <a class="top-media__link" href="#">
+          <a class="top-media__link" target="_blank" href="#">
             <svg class="top-media__icon">
               <use
                 xlink:href="./src/images/icons/sprite.svg#icon-discord"
@@ -92,7 +98,11 @@
 
       <footer class="footer">
         <div class="media">
-          <a class="media__link" href="https://twitter.com/hamlanreh">
+          <a
+            class="media__link"
+            target="_blank"
+            href="https://twitter.com/hamlanreh"
+          >
             <svg class="media__icon">
               <use
                 xlink:href="./src/images/icons/sprite.svg#icon-twitter"
@@ -102,6 +112,7 @@
 
           <a
             class="media__link"
+            target="_blank"
             href="https://www.youtube.com/channel/UCZl4sLl3ux5bNqJw7Ec2pdg"
           >
             <svg class="media__icon">
@@ -113,6 +124,7 @@
 
           <a
             class="media__link"
+            target="_blank"
             href="https://www.linkedin.com/in/ahmed-oluwabi-748844232"
           >
             <svg class="media__icon">
@@ -122,7 +134,7 @@
             </svg>
           </a>
 
-          <a class="media__link" href="#">
+          <a class="media__link" target="_blank" href="#">
             <svg class="media__icon">
               <use
                 xlink:href="./src/images/icons/sprite.svg#icon-discord"
