Added whatsapp icon and changed forcast weather date format

--- a/index.html
+++ b/index.html
@@ -70,10 +70,14 @@
             </svg>
           </a>
 
-          <a class="top-media__link" target="_blank" href="#">
+          <a
+            class="top-media__link"
+            target="_blank"
+            href="https://wa.me/+2347084345275"
+          >
             <svg class="top-media__icon">
               <use
-                xlink:href="./src/images/icons/sprite.svg#icon-discord"
+                xlink:href="./src/images/icons/sprite.svg#icon-whatsapp"
               ></use>
             </svg>
           </a>
@@ -134,10 +138,14 @@
             </svg>
           </a>
 
-          <a class="media__link" target="_blank" href="#">
+          <a
+            class="media__link"
+            target="_blank"
+            href="https://wa.me/+2347084345275"
+          >
             <svg class="media__icon">
               <use
-                xlink:href="./src/images/icons/sprite.svg#icon-discord"
+                xlink:href="./src/images/icons/sprite.svg#icon-whatsapp"
               ></use>
             </svg>
           </a>
